Konfiguracja SQL Server, dodanie arkuszy stylów do strony

--- a/Agile16_Komis/Agile16_Komis.csproj
+++ b/Agile16_Komis/Agile16_Komis.csproj
@@ -76,6 +76,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="src\style\Style.css" />
     <Content Include="src\wwwroot\advancedSearch.aspx" />
     <Content Include="src\wwwroot\contact.aspx" />
     <Content Include="src\wwwroot\offer.aspx" />
