--- a/Agile16_Komis/Agile16_Komis.csproj
+++ b/Agile16_Komis/Agile16_Komis.csproj
@@ -66,7 +66,13 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\KomisDB.mdf" />
+    <Content Include="App_Data\KomisDB_log.ldf">
+      <DependentUpon>KomisDB.mdf</DependentUpon>
+    </Content>
+    <Content Include="Models\DBgeneration.sql" />
     <Content Include="packages.config" />
+    <Content Include="src\wwwroot\ShopMaster.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -88,6 +94,13 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\wwwroot\ShopMaster.Master.cs">
+      <DependentUpon>ShopMaster.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="src\wwwroot\ShopMaster.Master.designer.cs">
+      <DependentUpon>ShopMaster.Master</DependentUpon>
+    </Compile>
     <Compile Include="src\wwwroot\advancedSearch.aspx.cs">
       <DependentUpon>advancedSearch.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -102,6 +115,7 @@
     <Compile Include="src\wwwroot\contact.aspx.designer.cs">
       <DependentUpon>contact.aspx</DependentUpon>
     </Compile>
+    <Compile Include="src\wwwroot\Database\Database.cs" />
     <Compile Include="src\wwwroot\index.aspx.cs">
       <DependentUpon>index.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -117,10 +131,7 @@
       <DependentUpon>offer.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
