--- a/Agile16_Komis/Agile16_Komis.csproj
+++ b/Agile16_Komis/Agile16_Komis.csproj
@@ -72,6 +72,7 @@
     </Content>
     <Content Include="Models\DBgeneration.sql" />
     <Content Include="packages.config" />
+    <Content Include="src\wwwroot\default.aspx" />
     <Content Include="src\wwwroot\ShopMaster.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -95,6 +96,13 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\wwwroot\default.aspx.cs">
+      <DependentUpon>default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="src\wwwroot\default.aspx.designer.cs">
+      <DependentUpon>default.aspx</DependentUpon>
+    </Compile>
     <Compile Include="src\wwwroot\ShopMaster.Master.cs">
       <DependentUpon>ShopMaster.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
