--- a/Agile16_Komis/Web.config
+++ b/Agile16_Komis/Web.config
@@ -8,6 +8,14 @@
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
   </system.web>
+  <system.webServer>
+    <defaultDocument>
+      <files>
+        <add value="shop.aspx" />
+      </files>
+    </defaultDocument>
+    <directoryBrowse enabled="false" />
+  </system.webServer>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs"
