--- a/Agile16_Komis/Web.config
+++ b/Agile16_Komis/Web.config
@@ -4,10 +4,35 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
+  
+  <connectionStrings>
+    <add name="MySqlConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Users.mdf;Integrated Security=True" />
+  </connectionStrings>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
+  
+    <authentication mode="Forms">
+      <forms loginUrl="Logon.aspx" name="THECOOKIE" slidingExpiration="true" protection="All" timeout="20" />
+    </authentication>
+    <authorization>
+      <allow users="*" />
+      <allow users="?" />
+    </authorization>
+    
+    <membership defaultProvider="SqlProvider" userIsOnlineTimeWindow="15">
+      <providers>
+        <clear />
+        <add name="SqlProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="MySqlConnection" applicationName="MyApplication" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="true" passwordFormat="Hashed" />
+      </providers>
+    </membership>
+  
   </system.web>
+  
   <system.webServer>
     <defaultDocument>
       <files>
@@ -16,6 +41,7 @@
     </defaultDocument>
     <directoryBrowse enabled="false" />
   </system.webServer>
+  
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs"
@@ -26,4 +52,5 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+
 </configuration>
