Dodano możliwość wyświetlania danych z bazy, dodawania do bazy danych samochodów, ustawiono stronę główną na index.aspx

--- a/Agile16_Komis/Agile16_Komis.csproj
+++ b/Agile16_Komis/Agile16_Komis.csproj
@@ -93,9 +93,9 @@
     <Content Include="src\wwwroot\index.aspx" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Code\Car.cs" />
-    <Content Include="App_Code\ListCar.cs" />
-    <Content Include="App_Code\Search.cs" />
+    <Compile Include="App_Code\Car.cs" />
+    <Compile Include="App_Code\ListCar.cs" />
+    <Compile Include="App_Code\Search.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
